[package]
name = "tie"
version = "0.1.0"
authors = ["Matthias Schorsch <matthias.schorsch@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.8.0"
termion = "1"
anyhow = "1"
reqwest = { version = "0.10.0", features = ["json", "blocking"] }
# tokio = { version = "0.2.6", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
ordered-float = "1"
structopt = "0.3"